--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "devDependencies": {
     "browser-sync": "^2.12.3",
-    "gulp": "^3.9.1",
+    "coffee-script": "^1.10.0",
+    "gulp": "^3.9.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
