--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "devDependencies": {
     "browser-sync": "^2.12.3",
     "coffee-script": "^1.10.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
+    "gulp-plumber": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
