--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "devDependencies": {
     "browser-sync": "^2.12.3",
+    "browserify": "^13.0.0",
+    "coffeeify": "^2.0.1",
     "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.2",
-    "gulp-plumber": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
