--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "framer-bootstrap",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Bootstrap your Framer.js prototype development.",
+  "keywords": ["prototype", "framer", "framerjs"],
+  "homepage": "https://github.com/alexchantastic/framer-bootstrap",
+  "bugs": {"url": "https://github.com/alexchantastic/framer-bootstrap/issues"},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexchantastic/framer-bootstrap.git"
+  },
+  "main": "app.js",
   "devDependencies": {
     "browser-sync": "^2.12.3",
     "browserify": "^13.0.0",
@@ -10,12 +17,6 @@
     "gulp": "^3.9.1",
     "vinyl-source-stream": "^1.1.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "vinyl-source-stream": "^1.1.0"
-  }
+  "author": "Alex Chan",
+  "license": "MIT"
 }
