--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "main": "app.js",
   "devDependencies": {
     "browser-sync": "^2.18.13",
+    "coffee-loader": "^0.7.3",
     "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.4"
+    "webpack": "^3.4.1",
+    "webpack2-stream-watch": "^3.2.2"
   },
   "author": "Alex Chan",
   "license": "MIT"
