--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "coffee-loader": "^0.7.3",
+    "coffee-script": "^1.12.7",
     "gulp": "^3.9.1",
     "webpack": "^3.4.1",
     "webpack2-stream-watch": "^3.2.2"
