--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "coffee-script": "^1.12.7",
     "gulp": "^3.9.1",
     "webpack": "^3.4.1",
-    "webpack2-stream-watch": "^3.2.2"
+    "webpack-stream": "^3.2.0"
   },
   "author": "Alex Chan",
   "license": "MIT",
