--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "url": "https://github.com/alexchantastic/framer-seed.git"
   },
   "main": "app.js",
-  "devDependencies": {
-    "browser-sync": "^2.18.13",
-    "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.7",
-    "gulp": "^3.9.1",
-    "webpack": "^3.4.1",
-    "webpack-stream": "^3.2.0"
-  },
   "author": "Alex Chan",
   "license": "MIT",
+  "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.3.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
+  },
   "dependencies": {
     "framerjs": "git+ssh://git@github.com:koenbok/Framer.git"
   },
   "scripts": {
-    "install": "npm --prefix ./node_modules/framerjs/ install && make dist -C ./node_modules/framerjs/ && cp ./node_modules/framerjs/build/framer.js ./framer/"
+    "build": "webpack",
+    "install": "yarn --cwd ./node_modules/framerjs/ install && make dist -C ./node_modules/framerjs/ && cp ./node_modules/framerjs/build/framer.js ./src/framer/",
+    "start": "webpack-dev-server"
   }
 }
