update README; tagline

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "framer-seed",
     "version": "2.0.0",
-    "description": "Kickstart your Framer Library prototype development.",
+    "description": "Resurrect your Framer Library prototype development.",
     "keywords": [
         "prototype",
         "framer",
